log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      # volumes:
      #   - name: shared-logs
      #     persistentVolumeClaim:
      #       claimName: shared-logs-pvc
      containers:
        - name: log-output
          image: bidhe1/log_output:latest
          ports:
            - containerPort: 3000
          # volumeMounts:
          #   - name: shared-logs
          #     mountPath: /app/logs
