log_output/manifests/nodeport.yaml
# NodePort type service is required with an Ingress in GKE.
# Even though it is NodePort, GKE does not expose it outside the cluster.
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
