log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
